bearer work finally! add some sexy, just have to finish
